--- a/Excercises/övning_E00_linjär_regression.ipynb
+++ b/Excercises/övning_E00_linjär_regression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +428,85 @@
     "print(f\"MAE: {mae_result:.2f}\")\n",
     "print(f\"MSE: {mse_result:.2f}\")\n",
     "print(f\"RMSE: {rmse_result:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Simulate more explanatory variables\n",
+    "\n",
+    "Now we will simulate the explanatory variables for minutes, text messages and amount of surf. For reference and reproducibility use numpy random seed 42. Assume there is:\n",
+    "- mean start cost: 25kr\n",
+    "- mean cost per minute: 2kr\n",
+    "- mean cost per sms: 50 öre\n",
+    "- mean cost per GB: 50kr\n",
+    "\n",
+    "##### a) Simulate 10000 samples of each of X1, X2, X3 and Y and save them in a DataFrame. Also add an intercept column containing ones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Intercept     Minuter  SMS Surf (GB)     Kostnad\n",
+      "0            1  104.967142   41   2.20835  404.944317\n",
+      "1            1   98.617357   16  1.026793  354.340829\n",
+      "0          ...         ...  ...       ...         ...\n",
+      "9998         1  104.957656   25  2.786991  261.305578\n",
+      "9999         1  106.443885   50  0.275084  330.575138\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sätter seed 42 för reproducerbarhet\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Antal sampel, (slumpmässigt genererade värden från en normalfördelning.)\n",
+    "n_sample = 10000\n",
+    "\n",
+    "# Simulera X1, X2, X3. \n",
+    "# x_1 = Medelvärde 100, standardavvikelsen = kvadratroten av variansen (100). np.abs() beräknar absolutvärdet av varje element i arrayen.\n",
+    "# x_2 = diskret uniform fördelning mellan 0 och 50, genererar slumpmässiga värden. Varje värde i arrayen är ett heltal. \n",
+    "# Vill vi ha kontinuerlig uniform fördelning mellan 0 och 50, där varje värde i arrayen kan vara ett decimaltal = np.random.uniform(0, 50, n_sample)\n",
+    "# x_3 = Slumpmässigt genererade värden från en normalfördelning med medelvärdet 0 och standardavvikelsen 2. Värdena kan vara positiva eller negativa. np.abs() tar absolutvärdet av varje värde i arrayen, vilket innebär att alla negativa värden blir positiva.\n",
+    "x_1 = np.abs(np.random.normal(100, np.sqrt(100), n_sample))\n",
+    "x_2 = np.random.choice(np.arange(0, 51), n_sample)\n",
+    "x_3 = np.abs(np.random.normal(0, 2, n_sample))\n",
+    "\n",
+    "# Simulera feltermen ε ~ 𝒩(0, 50)\n",
+    "epsilon = np.random.normal(0, 50, n_sample)\n",
+    "\n",
+    "# Beräkna y enligt modellen: y = 25 + 2x1 +0.5x2 + 50x3 + ε \n",
+    "y = 25 + 2 * x_1 + 0.5 * x_2 + 50 * x_3 + epsilon\n",
+    "\n",
+    "# Skapa DataFrame \n",
+    "data = pd.DataFrame({\"x_1\": x_1, \"x_2\": x_2, \"x_3\": x_3, \"y\": y})\n",
+    "\n",
+    "# Lägg till intercept-kolumn med ettor\n",
+    "data['intercept'] = 1\n",
+    "\n",
+    "# Skapa DataFrame med önskade kolumner\n",
+    "df = pd.DataFrame({\n",
+    "    \"Intercept\": data[\"intercept\"],\n",
+    "    \"Minuter\": data[\"x_1\"],\n",
+    "    \"SMS\": data[\"x_2\"],\n",
+    "    \"Surf (GB)\": data[\"x_3\"],\n",
+    "    \"Kostnad\": data[\"y\"]\n",
+    "})\n",
+    "\n",
+    "# Visa de första raderna av DataFrame\n",
+    "# Kombinera första och sista rader i en snygg utskrift\n",
+    "print(pd.concat([df.head(2), pd.DataFrame([['...']*len(df.columns)], columns=df.columns), df.tail(2)]))\n",
+    "\n"
    ]
   }
  ],
