--- a/Excercises/övning_E00_linjär_regression.ipynb
+++ b/Excercises/övning_E00_linjär_regression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -510,8 +510,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b) Make histograms for each of the explanatory variables X1, X2, X3 and the response variable y.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -578,6 +585,230 @@
     "print(f\"Antal rader före filtrering: {len(data)}\")\n",
     "print(f\"Antal rader efter filtrering: {len(filtered_data)}\")\n",
     "print(f\"Procent av data som behållits: {(len(filtered_data)/len(data))*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Multiple linear regression\n",
+    "a) Perform a train|test split with 0.8 of the data for training\n",
+    "\n",
+    "### Förklaring av Träning/Test-Dela Kod\n",
+    "Denna kod utför en träning/test-delning av en dataset för att förbereda den för modellträning och utvärdering.\n",
+    "\n",
+    "1. **Importera Nödvändiga Bibliotek**:\n",
+    "   ```python\n",
+    "   from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "2. **Definiera Datan**:\n",
+    "* X definieras som en DataFrame som innehåller \"Minuter\", vilket är den förklarande variabeln.\n",
+    "* y definieras som \"Kostnad\", vilket är målvariabeln.\n",
+    "\n",
+    "3. **Dela Upp Datan**:\n",
+    "* train_test_split används för att dela upp datan i tränings- och testset, där 80% av datan används för träning (train_size=0.8).\n",
+    "* random_state=42 säkerställer att uppdelningen är reproducerbar.\n",
+    "\n",
+    "Sammanfattning:\n",
+    "Denna kod är en grundläggande del av maskininlärning där datan delas upp i tränings- och testset för att möjliggöra effektiv träning och utvärdering av en modell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Träningsdata storlek: 8000\n",
+      "Testdata storlek: 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Anta att df är din DataFrame och 'Kostnad' är målet\n",
+    "X = df[['Minuter']]  # Använd 'Minuter' som förklarande variabel\n",
+    "y = df['Kostnad']    # Målvariabel\n",
+    "\n",
+    "# Dela upp datan\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "\n",
+    "# Skriv ut längden på tränings- och testdata\n",
+    "print(f\"Träningsdata storlek: {X_train.shape[0]}\")\n",
+    "print(f\"Testdata storlek: {X_test.shape[0]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b) Use the normal equation to compute $\\hat{\\beta}$\n",
+    "Här beräknas koefficienterna med normalekvationen, där X_train_with_intercept innehåller en kolumn av ettor för interceptet och \"Minuter\" som den enda förklarande variabeln.\n",
+    "* Resultatet [114.19555438, 2.01849911] innebär att:\n",
+    "  * Intercept: 114.20 (det förväntade värdet av \"Kostnad\" när \"Minuter\" är 0).\n",
+    "  * Koefficient för \"Minuter\": 2.02 (för varje enhetsökning i \"Minuter\" ökar \"Kostnad\"\n",
+    "  med cirka 2.02)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beräknade koefficienter (beta): [116.46855104   1.98465701]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Anta att df är din DataFrame med 'Minuter' och 'Kostnad'\n",
+    "X = df[['Minuter']]  # Förklarande variabel\n",
+    "y = df['Kostnad']    # Målvariabel\n",
+    "\n",
+    "# Dela upp datan i tränings- och testset\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
+    "\n",
+    "# Lägg till en kolumn av ettor för intercept\n",
+    "X_train_with_intercept = np.c_[np.ones(X_train.shape[0]), X_train]\n",
+    "\n",
+    "# Beräkna beta med normalekvationen\n",
+    "beta_hat = np.linalg.inv(X_train_with_intercept.T @ X_train_with_intercept) @ (X_train_with_intercept.T @ y_train)\n",
+    "\n",
+    "# Visa resultatet\n",
+    "print(\"Beräknade koefficienter (beta):\", beta_hat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Annat exempel på uppgift 5a) och 5b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Längd av X_train: 8000\n",
+      "Längd av X_test: 2000\n",
+      "Längd av y_train: 8000\n",
+      "Längd av y_test: 2000\n",
+      "Överlappande index mellan tränings- och testdata: set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# df = pd.DataFrame({'Minuter': x_filtered, 'Kostnad': y_filtered})\n",
+    "\n",
+    "# Blanda datan för att säkerställa att den är slumpmässigt fördelad\n",
+    "df = df.sample(frac=1, random_state=42)\n",
+    "\n",
+    "# Beräkna antalet rader för träningsdata\n",
+    "train_size = int(0.8 * len(df))\n",
+    "\n",
+    "# Dela upp datan i tränings- och testset\n",
+    "X_train = df[['Minuter']].iloc[:train_size]\n",
+    "X_test = df[['Minuter']].iloc[train_size:]\n",
+    "y_train = df[['Kostnad']].iloc[:train_size]\n",
+    "y_test = df[['Kostnad']].iloc[train_size:]\n",
+    "\n",
+    "# Skriv ut längden på tränings- och testdata\n",
+    "print(f\"Längd av X_train: {len(X_train)}\")\n",
+    "print(f\"Längd av X_test: {len(X_test)}\")\n",
+    "print(f\"Längd av y_train: {len(y_train)}\")\n",
+    "print(f\"Längd av y_test: {len(y_test)}\")\n",
+    "\n",
+    "# Kontrollera att tränings- och testdata inte överlappar\n",
+    "train_indices = X_train.index\n",
+    "test_indices = X_test.index\n",
+    "overlap = set(train_indices).intersection(set(test_indices))\n",
+    "print(f\"Överlappande index mellan tränings- och testdata: {overlap}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beräknade koefficienter (beta_hat): \n",
+      "      Kostnad\n",
+      "0  117.080377\n",
+      "1    1.991683\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Lägg till en kolumn med ettor för interceptet\n",
+    "X_train_b = np.c_[np.ones((X_train.shape[0], 1)), X_train]\n",
+    "\n",
+    "# Beräkna koefficienterna med normalekvationen\n",
+    "beta_hat = np.linalg.inv(X_train_b.T @ X_train_b) @ X_train_b.T @ y_train\n",
+    "\n",
+    "print(f\"Beräknade koefficienter (beta_hat): \\n{beta_hat}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### C) Predict on the test data and compute MAE, MSE and RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 63.905248816391975\n",
+      "Mean Squared Error (MSE): 6442.205658183149\n",
+      "Root Mean Squared Error (RMSE): 80.26335189975029\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\n",
+    "# Lägg till en kolumn med ettor för interceptet i testdatan\n",
+    "X_test_b = np.c_[np.ones((X_test.shape[0], 1)), X_test]\n",
+    "\n",
+    "# Gör förutsägelser på testdatan\n",
+    "y_pred = X_test_b @ beta_hat\n",
+    "\n",
+    "# Beräkna MAE, MSE och RMSE\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
+    "print(f\"Mean Squared Error (MSE): {mse}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse}\")"
    ]
   }
  ],
