--- a/Excercises/övning_E00_linjär_regression.ipynb
+++ b/Excercises/övning_E00_linjär_regression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -809,6 +809,44 @@
     "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
     "print(f\"Mean Squared Error (MSE): {mse}\")\n",
     "print(f\"Root Mean Squared Error (RMSE): {rmse}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Analys av Felmåtten**\n",
+    "\n",
+    "**MAE = 63.905**  \n",
+    "Detta betyder att i genomsnitt avviker de förutsagda värdena med cirka 64 kronor från de faktiska värdena. Detta är det genomsnittliga absoluta felet i kronor.\n",
+    "\n",
+    "**MSE = 6442.205**  \n",
+    "Detta är det genomsnittliga kvadrerade felet. Eftersom det är kvadrerat är det svårare att tolka direkt.\n",
+    "\n",
+    "**RMSE = 80.263**  \n",
+    "Detta betyder att standardavvikelsen av felen är cirka 80 kronor. RMSE är i samma enhet som målvariabeln (kronor).\n",
+    "\n",
+    "##### **Tolkning av Prestandan**\n",
+    "\n",
+    "- Modellen har en genomsnittlig felmarginal på 64 kronor (MAE).\n",
+    "- Den högre RMSE (80 kronor) jämfört med MAE (64 kronor) indikerar att det finns några större avvikelser i förutsägelserna.\n",
+    "- Om vi antar att detta handlar om telefonkostnader (baserat på tidigare kontext), kan dessa felmått anses vara:\n",
+    "  - Relativt stora om genomsnittliga månadskostnader är några hundra kronor\n",
+    "  - Mer acceptabla om genomsnittliga månadskostnader är flera tusen kronor\n",
+    "\n",
+    "----\n",
+    "\n",
+    "För att bättre bedöma om dessa värden är bra eller dåliga skulle det vara hjälpsamt att:\n",
+    "\n",
+    "- Jämföra med genomsnittliga kostnader i datasetet\n",
+    "- Jämföra med andra modellers prestanda\n",
+    "- Utvärdera om felmarginalerna är acceptabla för det specifika användningsfallet\n",
+    "\n",
+    "Om du vill förbättra modellens prestanda kan du överväga att:\n",
+    "\n",
+    "- Inkludera fler relevanta förklarande variabler\n",
+    "- Undersöka om det finns icke-linjära samband\n",
+    "- Hantera eventuella extremvärden i datasetet"
    ]
   }
  ],
