--- a/Excercises/övning_E01_sklearn.ipynb
+++ b/Excercises/övning_E01_sklearn.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -267,12 +267,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### d) I have chosen to drop the columns origin and name. Think yourself if it is reasonable and feel free to experiment. Also there might be some domain experts in our class, that you can ask."
+    "#### d) I have chosen to drop the columns origin and name. Think yourself if it is reasonable and feel free to experiment. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "4  17.0          8         302.0       140.0    3449          10.5          70"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +491,364 @@
     "print(f'Mean Absolute Error (MAE): {mae}')\n",
     "print(f'Mean Squared Error (MSE): {mse}')\n",
     "print(f'Root Mean Squared Error (RMSE): {rmse}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Compare models (*)\n",
+    "Create the following models:\n",
+    "\n",
+    "* Linear regression (SVD)\n",
+    "* Linear regression (SVD) with scaled data (feature standardization)\n",
+    "* Polynomial linear regression with degree 1\n",
+    "* Polynomial linear regression with degree 2\n",
+    "* Polynomial linear regression with degree 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear regression (SVD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 2.503860089776125\n",
+      "Mean Squared Error (MSE): 10.502370329417303\n",
+      "Root Mean Squared Error (RMSE): 3.2407360783342574\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Skapa och träna modellen\n",
+    "model_svd = LinearRegression()\n",
+    "model_svd.fit(X_train, y_train)\n",
+    "\n",
+    "# Gör förutsägelse \n",
+    "predictions_svd = model_svd.predict(X_test)\n",
+    "\n",
+    "# Utvärdera modellen\n",
+    "mae_svd = mean_absolute_error(y_test, predictions_svd)\n",
+    "mse_svd = mean_squared_error(y_test, predictions_svd)\n",
+    "rmse_svd = np.sqrt(mse_svd)\n",
+    "\n",
+    "print(f'Mean Absolute Error (MAE): {mae_svd}')\n",
+    "print(f'Mean Squared Error (MSE): {mse_svd}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse_svd}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear regression (SVD) with scaled data (feature standardization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 2.5038600897761234\n",
+      "Mean Squared Error (MSE): 10.502370329417294\n",
+      "Root Mean Squared Error (RMSE): 3.240736078334256\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Skala/Standardisera datan\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Träna modellen / Skapa och träna en linjär regressionsmodell med standardiserad data\n",
+    "model_svd_scaled = LinearRegression()\n",
+    "model_svd_scaled.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Gör förutsägelser\n",
+    "predictions_svd_scaled = model_svd_scaled.predict(X_test_scaled)\n",
+    "\n",
+    "# Beräkna felmåtten\n",
+    "mae_scaled = mean_absolute_error(y_test, predictions_svd_scaled)\n",
+    "mse_scaled = mean_squared_error(y_test, predictions_svd_scaled)\n",
+    "rmse_scaled = np.sqrt(mse_scaled)\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(f'Mean Absolute Error (MAE): {mae_scaled}')\n",
+    "print(f'Mean Squared Error (MSE): {mse_scaled}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse_scaled}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Polynomial linear regression with degree 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 2.5038600897761296\n",
+      "Mean Squared Error (MSE): 10.502370329417335\n",
+      "Root Mean Squared Error (RMSE): 3.2407360783342627\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "# Skapa Ploynomfunktioner\n",
+    "poly = PolynomialFeatures(degree=1)\n",
+    "\n",
+    "# Transformera X_train och X_test till polynomfunktioner\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.transform(X_test)\n",
+    "\n",
+    "# Träna modellen\n",
+    "model_poly = LinearRegression()\n",
+    "model_poly.fit(X_train_poly, y_train)\n",
+    "\n",
+    "# Gör förutsägelser\n",
+    "predictions_poly = model_poly.predict(X_test_poly)\n",
+    "\n",
+    "# Beräkna felmåtten / MAE, MSE och RMSE för att utvärder polynommodellens prestanda\n",
+    "mae_poly = mean_absolute_error(y_test, predictions_poly)\n",
+    "mse_poly = mean_squared_error(y_test, predictions_poly)\n",
+    "rmse_poly = np.sqrt(mse_poly)\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(f'Mean Absolute Error (MAE): {mae_poly}')\n",
+    "print(f'Mean Squared Error (MSE): {mse_poly}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse_poly}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Polynomial linear regression with degree 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 1.9804772090994571\n",
+      "Mean Squared Error (MSE): 7.41985814584245\n",
+      "Root Mean Squared Error (RMSE): 2.7239416561010352\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "# Skapa Polynomfunktioner \n",
+    "poly = PolynomialFeatures(degree=2)\n",
+    "\n",
+    "# Transformera X_train och X_test till polynomfunktioner av grad 2\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.transform(X_test)\n",
+    "\n",
+    "# Träna modellen\n",
+    "model_poly_2 = LinearRegression()\n",
+    "model_poly_2.fit(X_train_poly, y_train)\n",
+    "\n",
+    "# Gör förutsägelser\n",
+    "predictions_poly_2 = model_poly_2.predict(X_test_poly)\n",
+    "\n",
+    "# Beräkna felmått\n",
+    "mae_poly_2 = mean_absolute_error(y_test, predictions_poly_2)\n",
+    "mse_poly_2 = mean_squared_error(y_test, predictions_poly_2)\n",
+    "rmse_poly_2 = np.sqrt(mse_poly_2)\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(f'Mean Absolute Error (MAE): {mae_poly_2}')\n",
+    "print(f'Mean Squared Error (MSE): {mse_poly_2}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse_poly_2}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Polynomial linear regression with degree 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 2.0375489723275257\n",
+      "Mean Squared Error (MSE): 8.010501034670792\n",
+      "Root Mean Squared Error (RMSE): 2.8302828541809726\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "# Skapa Polynomfunktioner\n",
+    "poly3 = PolynomialFeatures(degree=3)\n",
+    "\n",
+    "# Transformera X_train och X_test till polynomfunktioner av grad 3\n",
+    "X_train_poly3 = poly3.fit_transform(X_train)\n",
+    "X_test_poly3 = poly3.transform(X_test)\n",
+    "\n",
+    "# Träna modellen\n",
+    "model_poly_3 = LinearRegression()\n",
+    "model_poly_3.fit(X_train_poly3, y_train)\n",
+    "\n",
+    "# Gör förutsägelser\n",
+    "predictions_poly_3 = model_poly_3.predict(X_test_poly3)\n",
+    "\n",
+    "# Beräkna felmått\n",
+    "mae_poly_3 = mean_absolute_error(y_test, predictions_poly_3)\n",
+    "mse_poly_3 = mean_squared_error(y_test, predictions_poly_3)\n",
+    "rmse_poly_3 = np.sqrt(mse_poly_3)\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(f'Mean Absolute Error (MAE): {mae_poly_3}')\n",
+    "print(f'Mean Squared Error (MSE): {mse_poly_3}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse_poly_3}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Make a DataFrame with evaluation metrics and model to compare results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Linear Regr. SVD</th>\n",
+       "      <th>Linear Regr. SVD scaled</th>\n",
+       "      <th>Polynom Regr. deg 1</th>\n",
+       "      <th>Polynom Regr. deg 2</th>\n",
+       "      <th>Polynom Regr. deg 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MAE</th>\n",
+       "      <td>2.50386</td>\n",
+       "      <td>2.50386</td>\n",
+       "      <td>2.50386</td>\n",
+       "      <td>1.98048</td>\n",
+       "      <td>2.03755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSE</th>\n",
+       "      <td>10.50237</td>\n",
+       "      <td>10.50237</td>\n",
+       "      <td>10.50237</td>\n",
+       "      <td>7.41986</td>\n",
+       "      <td>8.01050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RMSE</th>\n",
+       "      <td>3.24074</td>\n",
+       "      <td>3.24074</td>\n",
+       "      <td>3.24074</td>\n",
+       "      <td>2.72394</td>\n",
+       "      <td>2.83028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Linear Regr. SVD  Linear Regr. SVD scaled  Polynom Regr. deg 1  \\\n",
+       "MAE            2.50386                  2.50386              2.50386   \n",
+       "MSE           10.50237                 10.50237             10.50237   \n",
+       "RMSE           3.24074                  3.24074              3.24074   \n",
+       "\n",
+       "      Polynom Regr. deg 2  Polynom Regr. deg 3  \n",
+       "MAE               1.98048              2.03755  \n",
+       "MSE               7.41986              8.01050  \n",
+       "RMSE              2.72394              2.83028  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Skapa en DataFrame\n",
+    "import pandas as pd\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Linear Regr. SVD': [mae_svd, mse_svd, rmse_svd],\n",
+    "    'Linear Regr. SVD scaled': [mae_scaled, mse_scaled, rmse_scaled],\n",
+    "    'Polynom Regr. deg 1': [mae_poly, mse_poly, rmse_poly],\n",
+    "    'Polynom Regr. deg 2': [mae_poly_2, mse_poly_2, rmse_poly_2],\n",
+    "    'Polynom Regr. deg 3': [mae_poly_3, mse_poly_3, rmse_poly_3]\n",
+    "}, index=[\"MAE\", \"MSE\", \"RMSE\"])\n",
+    "\n",
+    "# Formatera talen till 5 decimaler\n",
+    "metrics_df = metrics_df.round(5)\n",
+    "\n",
+    "metrics_df.head()\n"
    ]
   }
  ],
