--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -520,6 +520,7 @@
     "# Filtrera BMI-värden så vi hamnar mellan 15-50\n",
     "df = df[(df['BMI'] >= 15) & (df['BMI'] <= 50)]\n",
     "\n",
+    "# Skapar en funktion för att kategorisera BMI-värden\n",
     "def bmi_category(bmi):\n",
     "    if bmi < 18.5:\n",
     "        return \"Underweight:\"\n",
@@ -548,7 +549,7 @@
    "source": [
     "## Feature engineering blodtryck\n",
     "\n",
-    "#### Jag använder Blodtryckskategorier enligt Healthline\n",
+    "#### Jag använder Blodtryckskategorier enligt Healthline:\n",
     "\n",
     "| Kategori | Högtryck (Systolisk) | Lågtryck (Diastolisk) |\n",
     "|----------|----------------------|-----------------------|\n",
@@ -558,7 +559,7 @@
     "| Hypertensivitet stadiet 2 | ≥ 140 mmHg    | ≥ 90 mmHg   |\n",
     "| Hypertensiv kris | ≥ 180 mmHg    | ≥ 120 mmHg  |\n",
     "\n",
-    "#### Blodtryckskategorier\n",
+    "#### Blodtryckskategorier:\n",
     "\n",
     "**Normalt:**\n",
     "Ett normalt blodtryck är ett systoliskt tryck mindre än 120 millimeter mm Hg och ett diastoliskt tryck mindre än 80 mm Hg. Detta skrivs vanligtvis som 120/80. Blodtrycket är inom det hälsosamma området.\n",
@@ -575,11 +576,56 @@
     "**Hypertensiv kris:**\n",
     "Systoliskt talet är över 180 mm Hg, eller diastoliskt talet är över 120 mm Hg. Blodtrycket är akut farligt högt och kräver omedelbar medicinsk behandling. Det kan orsaka omedelbar skada på hjärta, hjärna och andra organ. Det kan även orsaka allvarliga komplikationer som: stroke, hjärtattack, njurskador, hjärnskador.\n",
     "\n",
-    "**Tar bort orimliga blodtrycks värden och outliers**:\n",
+    "#### **Tar bort orimliga blodtrycks värden och outliers**:\n",
+    "Vi börjar med att vi väljer bort extremt låga och höga värden som kan indikera mätfel på både systoliskt blodtryck (ap_hi) samt diastoliskt blodtryck (ap_low). Detta gör att vi kan bevara alla kliniskt möjliga värden som är inom tabellen ovan och ger då en rimlig marginal för variation. Detta gör att vi kan behålla användbar data för analysen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal i varje blodtryckskategori:\n",
+      "blood_pressure_category\n",
+      "Hypertension stage 1:    39641\n",
+      "Hypertension stage 2:    16222\n",
+      "Normal:                   9530\n",
+      "Elevated:                 3107\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtrerar bort orimliga blodtrycksvärden \n",
+    "# använder gränsen (ap_hi) = 50/250, (ap_lo) = 30/150\n",
+    "df = df[(df['ap_hi'] >= 50) & (df['ap_hi'] <= 250)]\n",
+    "df = df[(df['ap_lo'] >= 30) & (df['ap_lo'] <= 150)]\n",
     "\n",
+    "# Funktion för att kategorisera blodtrycksvärden enligt medicinska riktlinjer\n",
+    "def blood_pressure_category(ap_hi, ap_lo):\n",
+    "    if ap_hi < 120 and ap_lo < 80:\n",
+    "        return \"Normal:\"\n",
+    "    elif 120 <= ap_hi < 130 and ap_lo < 80:\n",
+    "        return \"Elevated:\"\n",
+    "    elif 130 <= ap_hi < 140 or 80 <= ap_lo < 90:\n",
+    "        return \"Hypertension stage 1:\"\n",
+    "    elif ap_hi >= 140 or ap_lo >= 90:\n",
+    "        return \"Hypertension stage 2:\"\n",
+    "    elif ap_hi >= 180 or ap_lo >= 120:\n",
+    "        return \"Hypertension crisis:\"\n",
+    "    else:\n",
+    "        return \"Data okänd\"\n",
     "\n",
+    "# Skapa en ny kolumn för kategorisk blodtryck\n",
+    "df['blood_pressure_category'] = df.apply(lambda x: blood_pressure_category(x['ap_hi'], x['ap_lo']), axis=1)\n",
     "\n",
-    "## Implementering"
+    "# Visa antal i varje kategori\n",
+    "print(\"Antal i varje blodtryckskategori:\")\n",
+    "print(df[\"blood_pressure_category\"].value_counts())"
    ]
   }
  ],
