--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -799,6 +799,122 @@
     "# Visa plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Skapa två dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Första dataset:\n",
+      "   id    age  cholesterol  gluc  smoke  alco  active  cardio  \\\n",
+      "0   0  18393            1     1      0     0       1       0   \n",
+      "1   1  20228            3     1      0     0       1       1   \n",
+      "2   2  18857            3     1      0     0       0       1   \n",
+      "3   3  17623            1     1      0     0       1       1   \n",
+      "4   4  17474            1     1      0     0       0       0   \n",
+      "\n",
+      "   BMI_category_Normal weight:  BMI_category_Obes class 1:  \\\n",
+      "0                         True                       False   \n",
+      "1                        False                        True   \n",
+      "2                         True                       False   \n",
+      "3                        False                       False   \n",
+      "4                         True                       False   \n",
+      "\n",
+      "   BMI_category_Obes class 2:  BMI_category_Obes class 3:  \\\n",
+      "0                       False                       False   \n",
+      "1                       False                       False   \n",
+      "2                       False                       False   \n",
+      "3                       False                       False   \n",
+      "4                       False                       False   \n",
+      "\n",
+      "   BMI_category_Overweight:  BMI_category_Underweight:  \\\n",
+      "0                     False                      False   \n",
+      "1                     False                      False   \n",
+      "2                     False                      False   \n",
+      "3                      True                      False   \n",
+      "4                     False                      False   \n",
+      "\n",
+      "   blood_pressure_category_Elevated:  \\\n",
+      "0                              False   \n",
+      "1                              False   \n",
+      "2                              False   \n",
+      "3                              False   \n",
+      "4                              False   \n",
+      "\n",
+      "   blood_pressure_category_Hypertension stage 1:  \\\n",
+      "0                                           True   \n",
+      "1                                          False   \n",
+      "2                                           True   \n",
+      "3                                          False   \n",
+      "4                                          False   \n",
+      "\n",
+      "   blood_pressure_category_Hypertension stage 2:  \\\n",
+      "0                                          False   \n",
+      "1                                           True   \n",
+      "2                                          False   \n",
+      "3                                           True   \n",
+      "4                                          False   \n",
+      "\n",
+      "   blood_pressure_category_Normal:  gender_1  gender_2  \n",
+      "0                            False     False      True  \n",
+      "1                            False      True     False  \n",
+      "2                            False      True     False  \n",
+      "3                            False     False      True  \n",
+      "4                             True      True     False  \n",
+      "\n",
+      "Andra dataset:\n",
+      "   id    age  ap_hi  ap_lo  cholesterol  gluc  smoke  alco  active  cardio  \\\n",
+      "0   0  18393    110     80            1     1      0     0       1       0   \n",
+      "1   1  20228    140     90            3     1      0     0       1       1   \n",
+      "2   2  18857    130     70            3     1      0     0       0       1   \n",
+      "3   3  17623    150    100            1     1      0     0       1       1   \n",
+      "4   4  17474    100     60            1     1      0     0       0       0   \n",
+      "\n",
+      "         BMI  gender_1  gender_2  \n",
+      "0  21.967120     False      True  \n",
+      "1  34.927679      True     False  \n",
+      "2  23.507805      True     False  \n",
+      "3  28.710479     False      True  \n",
+      "4  23.011177      True     False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kopia av DataFrame \n",
+    "df1 = df.copy()\n",
+    "\n",
+    "# Tar bort: aphi, aplo, height, weight, BMI\n",
+    "df1 = df1.drop([\"ap_hi\", \"ap_lo\", \"height\", \"weight\", \"BMI\"], axis=1)\n",
+    "\n",
+    "# Gör one-hot encoding för BMI-kategori, blodtryckskategori och kön\n",
+    "df1 = pd.get_dummies(df1, columns=['BMI_category', 'blood_pressure_category', 'gender'])\n",
+    "\n",
+    "# Skapa andra dataset\n",
+    "df2 = df.copy()\n",
+    "\n",
+    "# Ta bort specificerade features\n",
+    "df2 = df2.drop(['BMI_category', 'blood_pressure_category', 'height', 'weight'], axis=1)\n",
+    "\n",
+    "# Gör one-hot encoding för kön\n",
+    "df2 = pd.get_dummies(df2, columns=['gender'])\n",
+    "\n",
+    "# Visa första fem rader av båda dataseten\n",
+    "print(\"Första dataset:\")\n",
+    "print(df1.head())\n",
+    "print(\"\\nAndra dataset:\")\n",
+    "print(df2.head())"
+   ]
   }
  ],
  "metadata": {
