--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Programmering\\IT_hogskolan\\Machine-learning-Jenny\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -149,7 +157,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -657,6 +665,9 @@
     "\n",
     "# Skapa en mappning för blodsocker-värden\n",
     "gluc_mapping = {1: 'Normal', 2: 'Över normal', 3: 'Hög'}\n",
+    "\n",
+    "# Skapar en kopia av DataFrame\n",
+    "df_gluc = df.copy()\n",
     "\n",
     "# Mappa blodsocker-värden till lämpliga etiketter\n",
     "df_gluc['gluc_category'] = df_gluc['gluc'].map(gluc_mapping)\n",
@@ -762,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -824,54 +835,40 @@
       "3   3  17623            1     1      0     0       1       1   \n",
       "4   4  17474            1     1      0     0       0       0   \n",
       "\n",
-      "   BMI_category_Normal weight:  BMI_category_Obes class 1:  \\\n",
-      "0                         True                       False   \n",
-      "1                        False                        True   \n",
-      "2                         True                       False   \n",
-      "3                        False                       False   \n",
-      "4                         True                       False   \n",
+      "   BMI_category_Obes class 1:  BMI_category_Obes class 2:  \\\n",
+      "0                           0                           0   \n",
+      "1                           1                           0   \n",
+      "2                           0                           0   \n",
+      "3                           0                           0   \n",
+      "4                           0                           0   \n",
       "\n",
-      "   BMI_category_Obes class 2:  BMI_category_Obes class 3:  \\\n",
-      "0                       False                       False   \n",
-      "1                       False                       False   \n",
-      "2                       False                       False   \n",
-      "3                       False                       False   \n",
-      "4                       False                       False   \n",
+      "   BMI_category_Obes class 3:  BMI_category_Overweight:  \\\n",
+      "0                           0                         0   \n",
+      "1                           0                         0   \n",
+      "2                           0                         0   \n",
+      "3                           0                         1   \n",
+      "4                           0                         0   \n",
       "\n",
-      "   BMI_category_Overweight:  BMI_category_Underweight:  \\\n",
-      "0                     False                      False   \n",
-      "1                     False                      False   \n",
-      "2                     False                      False   \n",
-      "3                      True                      False   \n",
-      "4                     False                      False   \n",
-      "\n",
-      "   blood_pressure_category_Elevated:  \\\n",
-      "0                              False   \n",
-      "1                              False   \n",
-      "2                              False   \n",
-      "3                              False   \n",
-      "4                              False   \n",
-      "\n",
-      "   blood_pressure_category_Hypertension stage 1:  \\\n",
-      "0                                           True   \n",
-      "1                                          False   \n",
-      "2                                           True   \n",
-      "3                                          False   \n",
-      "4                                          False   \n",
+      "   BMI_category_Underweight:  blood_pressure_category_Hypertension stage 1:  \\\n",
+      "0                          0                                              1   \n",
+      "1                          0                                              0   \n",
+      "2                          0                                              1   \n",
+      "3                          0                                              0   \n",
+      "4                          0                                              0   \n",
       "\n",
       "   blood_pressure_category_Hypertension stage 2:  \\\n",
-      "0                                          False   \n",
-      "1                                           True   \n",
-      "2                                          False   \n",
-      "3                                           True   \n",
-      "4                                          False   \n",
+      "0                                              0   \n",
+      "1                                              1   \n",
+      "2                                              0   \n",
+      "3                                              1   \n",
+      "4                                              0   \n",
       "\n",
-      "   blood_pressure_category_Normal:  gender_1  gender_2  \n",
-      "0                            False     False      True  \n",
-      "1                            False      True     False  \n",
-      "2                            False      True     False  \n",
-      "3                            False     False      True  \n",
-      "4                             True      True     False  \n",
+      "   blood_pressure_category_Normal:  gender_2  \n",
+      "0                                0         1  \n",
+      "1                                0         0  \n",
+      "2                                0         0  \n",
+      "3                                0         1  \n",
+      "4                                1         0  \n",
       "\n",
       "Andra dataset:\n",
       "   id    age  ap_hi  ap_lo  cholesterol  gluc  smoke  alco  active  cardio  \\\n",
@@ -881,12 +878,12 @@
       "3   3  17623    150    100            1     1      0     0       1       1   \n",
       "4   4  17474    100     60            1     1      0     0       0       0   \n",
       "\n",
-      "         BMI  gender_1  gender_2  \n",
-      "0  21.967120     False      True  \n",
-      "1  34.927679      True     False  \n",
-      "2  23.507805      True     False  \n",
-      "3  28.710479     False      True  \n",
-      "4  23.011177      True     False  \n"
+      "         BMI  gender_2  \n",
+      "0  21.967120         1  \n",
+      "1  34.927679         0  \n",
+      "2  23.507805         0  \n",
+      "3  28.710479         1  \n",
+      "4  23.011177         0  \n"
      ]
     }
    ],
@@ -898,7 +895,7 @@
     "df1 = df1.drop([\"ap_hi\", \"ap_lo\", \"height\", \"weight\", \"BMI\"], axis=1)\n",
     "\n",
     "# Gör one-hot encoding för BMI-kategori, blodtryckskategori och kön\n",
-    "df1 = pd.get_dummies(df1, columns=['BMI_category', 'blood_pressure_category', 'gender'])\n",
+    "df1 = pd.get_dummies(df1, columns=['BMI_category', 'blood_pressure_category', 'gender'], drop_first=True, dtype=int)\n",
     "\n",
     "# Skapa andra dataset\n",
     "df2 = df.copy()\n",
@@ -907,7 +904,7 @@
     "df2 = df2.drop(['BMI_category', 'blood_pressure_category', 'height', 'weight'], axis=1)\n",
     "\n",
     "# Gör one-hot encoding för kön\n",
-    "df2 = pd.get_dummies(df2, columns=['gender'])\n",
+    "df2 = pd.get_dummies(df2, columns=['gender'], drop_first=True, dtype=int)\n",
     "\n",
     "# Visa första fem rader av båda dataseten\n",
     "print(\"Första dataset:\")\n",
